--- a/public/login.html
+++ b/public/login.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ASVMS Login</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
   <div class="top-right-logo">
@@ -13,15 +13,15 @@
   </div>
 
   <div class="form-container">
-    <img src="image/asvms-logo.png" alt="ASVMS Logo" class="logo" />
+    <img src="image/asvms-logo.png" alt="ASVMS Logo" class="logo">
     <h2>Academic Syllabus Version Management System</h2>
 
-    <input type="text" id="login-username" placeholder="Lecturer/Admin Username" />
-    <input type="password" id="login-password" placeholder="Password" />
-    <button onclick="login()">Login</button>
+    <input type="text" id="login-username" placeholder="Lecturer/Admin Username">
+    <input type="password" id="login-password" placeholder="Password">
+    <button type="button" onclick="login()">Login</button>
     <p><a href="signup.html">Create an account</a></p>
   </div>
 
-  <script src="script.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
