--- a/public/signup.html
+++ b/public/signup.html
@@ -1,9 +1,10 @@
+<!-- signup.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>ASVMS Sign Up</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/login.css" />
 </head>
 <body>
     <div class="top-right-logo">
@@ -15,10 +16,10 @@
     <h2>Create Account</h2>
     <input type="text" id="signup-username" placeholder="Username" />
     <input type="password" id="signup-password" placeholder="Password" />
-    <button onclick="signup()">Sign Up</button>
+    <button type="button" onclick="signup()">Sign Up</button>
     <p><a href="login.html">Back to Login</a></p>
   </div>
 
-  <script src="script.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
